--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -18,24 +18,24 @@
 	<body>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-			<div id="title" class="title">
-				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
-				<h4 id="uname">暂无昵称</h4>
-				<p id="utext" style="word-wrap: break-word;">暂无签名</p>
-			</div>
-			<!--各项-->
-			<ul class="mui-table-view mui-table-view-chevron">
-				<li class="mui-table-view-cell" position='6'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='7'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
-					</a>
-				</li>
-			</ul>
+				<div id="title" class="title">
+					<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
+					<h4 id="uname">暂无昵称</h4>
+					<p id="utext" style="word-wrap: break-word;">暂无签名</p>
+				</div>
+				<!--各项-->
+				<ul class="mui-table-view mui-table-view-chevron">
+					<li class="mui-table-view-cell" position='6'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='7'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -49,7 +49,7 @@
 				}
 			});
 			mui('.mui-scroll-wrapper').scroll({
-				 indicators: false //是否显示滚动条
+				indicators: false //是否显示滚动条
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
@@ -82,8 +82,10 @@
 					var data = {};
 					switch(parseInt(this.getAttribute('position'))) {
 						case 6:
-							targetWebUrl = '/html/mine/setting.html';
-							break;
+							mui.toast(consts.NOOPEN);
+							return;
+//							targetWebUrl = '/html/mine/setting.html';
+//							break;
 							//关于
 						case 7:
 							targetWebUrl = '/html/mine/about.html';
@@ -133,12 +135,12 @@
 			//关闭
 			function closeMenu() {
 				var longTime = 500;
-				if(plus.os.name == 'iOS'){
+				if(plus.os.name == 'iOS') {
 					longTime = 250;
 				}
-				setTimeout(function(){
+				setTimeout(function() {
 					mui.fire(main, "menu:close");
-				},longTime)
+				}, longTime)
 			}
 			//优化显示出来的侧滑菜单，只需监听该菜单的左滑事件，然后将其关闭即可；在菜单上右滑，不做任何操作；
 			window.addEventListener("swipeleft", closeMenu);
