--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -18,64 +18,64 @@
 	<body>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-			<div id="title" class="title">
-				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
-				<h4 id="uname">暂无昵称</h4>
-				<p id="utext" style="word-wrap: break-word;">暂无签名</p>
-			</div>
-			<!--各项-->
-			<ul class="mui-table-view mui-table-view-chevron">
-				<li class="mui-table-view-cell" position='0'>
-					<a class="mui-navigate-right" open-type="common">
-						<p><img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理</p>
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='1'>
-					<a class="mui-navigate-right" open-type="common">
-						<p><img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料</p>
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='3'>
-					<a class="" open-type="common">
-						<p><img src="../../image/mine/new-message.png" style="margin-right: 5px;" class="mine-icon"></span>新消息</p>
-						<span id="news-amount" class="mui-badge mui-badge-red">0</span>
-					</a>
-				</li>
-				<!--<li class="mui-table-view-cell" position='2'>
+				<div id="title" class="title">
+					<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
+					<h4 id="uname">暂无昵称</h4>
+					<p id="utext" style="word-wrap: break-word;">暂无签名</p>
+				</div>
+				<!--各项-->
+				<ul class="mui-table-view mui-table-view-chevron">
+					<li class="mui-table-view-cell" position='0'>
+						<a class="mui-navigate-right" open-type="common">
+							<p><img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理</p>
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='1'>
+						<a class="mui-navigate-right" open-type="common">
+							<p><img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料</p>
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='3'>
+						<a class="" open-type="common">
+							<p><img src="../../image/mine/new-message.png" style="margin-right: 5px;" class="mine-icon"></span>新消息</p>
+							<span id="news-amount" class="mui-badge mui-badge-red">0</span>
+						</a>
+					</li>
+					<!--<li class="mui-table-view-cell" position='2'>
 						<a class="mui-navigate-right" open-type="common">
 							<img src='../../image/mine/apply-group.png' class="mine-icon"></img> 申请加入群
 						</a>
 					</li>-->
-				<li class="mui-table-view-divider"></li>
+					<li class="mui-table-view-divider"></li>
 
-				<li class="mui-table-view-cell" position='4'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间</p>
-					</a>
-				</li>
-				<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核</p>
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='5'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分</p>
-					</a>
-				</li>
+					<li class="mui-table-view-cell" position='4'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间</p>
+						</a>
+					</li>
+					<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核</p>
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='5'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分</p>
+						</a>
+					</li>
 
-				<li class="mui-table-view-divider"></li>
-				<li class="mui-table-view-cell" position='6'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='7'>
-					<a class="mui-navigate-right">
-						<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
-					</a>
-				</li>
-			</ul>
+					<li class="mui-table-view-divider"></li>
+					<li class="mui-table-view-cell" position='6'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='7'>
+						<a class="mui-navigate-right">
+							<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -89,17 +89,24 @@
 				}
 			});
 			mui('.mui-scroll-wrapper').scroll({
-				 indicators: false //是否显示滚动条
+				indicators: false //是否显示滚动条
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
 			var info = null;
+			var interval;
 			mui.plusReady(function() {
 				var curPage = plus.webview.currentWebview();
 				main = curPage.opener();
 				//当前页面加载显示的监听
 				curPage.addEventListener("show", function(e) {
+					console.log("$$$$$$$$mine.html的show事件$$$$$$$$$");
 					mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
+					interval=setInterval(getNewsAmount,10000);
+				})
+				curPage.addEventListener('hide', function() {
+					console.log("$$$$$$$$mine.html的hide事件$$$$$$$$$");
+					clearInterval(interval);
 				})
 				//展示个人信息
 				getInfo();
@@ -226,10 +233,8 @@
 			 * 获取新消息数量
 			 */
 			var getNewsAmount = function() {
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_PostGrInvC({}, wd, function(data) {
-					wd.close();
-					//					//console.log('我的界面获取的新消息数目：' + JSON.stringify(data));
+				postDataPro_PostGrInvC({}, null, function(data) {
+					console.log('$$$$$$$$$$$$我的界面获取的新消息数目：', data);
 					var num = document.getElementById('news-amount');
 					if(data.RspCode == '0000') {
 						num.style.display = 'inline';
@@ -251,12 +256,12 @@
 			//关闭
 			function closeMenu() {
 				var longTime = 500;
-				if(plus.os.name == 'iOS'){
+				if(plus.os.name == 'iOS') {
 					longTime = 250;
 				}
-				setTimeout(function(){
+				setTimeout(function() {
 					mui.fire(main, "menu:close");
-				},longTime)
+				}, longTime)
 			}
 			//优化显示出来的侧滑菜单，只需监听该菜单的左滑事件，然后将其关闭即可；在菜单上右滑，不做任何操作；
 			window.addEventListener("swipeleft", closeMenu);
