--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -30,21 +30,6 @@
 	</head>
 
 	<body style="background-color: white;">
-		<li v-for="(li,index) of listData" v-bind:class="['mui-table-view-cell']" v-on:tap="jumpToPage(li)" v-bind:id="li.TabId" v-bind:value="index">
-			<div v-bind:class="['course-container']">
-				<div v-bind:class="['img-container']">
-					<img v-bind:class="['course-img']" v-bind:src="li.CoursePic" />
-					<span v-bind:class="['red-circle',{'display-none':li.IsUpdate==0}]"></span>
-				</div>
-				<div v-bind:class="['course-detail']">
-					<div v-bind:class="['courseName-button']">
-						<p v-bind:class="['course-name','single-line']">{{li.CourseName}}</p>
-						<button type="button" v-bind:class="['input-btn',{li.IsFocus?'btn-focused':'btn-unfocus'}]" v-on:tap.stop="toggleFocus(li)">{{li.IsFocus?"已关注":"关注"}}</button>
-					</div>
-					<p v-bind:class="['course-info','double-line']">{{li.SecName}}</p>
-				</div>
-			</div>
-		</li>
 		<!--下拉刷新容器-->
 		<div id="course-all" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':listData.length==0}">
 			<div class="mui-scroll">
@@ -113,6 +98,7 @@
 							events.toggleStorageArray(storageKeyName.FOCUSECOURSES, course.TabId, course.IsFocus);
 							course.IsFocus = !course.IsFocus;
 							events.fireToPageNone("course-attended.html", "courseAttended", (myStorage.getItem(storageKeyName.FOCUSECOURSES) && myStorage.getItem(storageKeyName.FOCUSECOURSES).length > 0));
+							events.fireToPageNone("course-home.html", "courseAttended", (myStorage.getItem(storageKeyName.FOCUSECOURSES) && myStorage.getItem(storageKeyName.FOCUSECOURSES).length > 0));
 							return;
 						}
 						//所需参数
@@ -130,6 +116,7 @@
 								course.IsFocus = !course.IsFocus;
 								var isAttended = data.RspData.FocusCnt > 0;
 								events.fireToPageNone("course-attended.html", "courseAttended", isAttended);
+								events.fireToPageNone("course-home.html", "courseAttended", isAttended);
 							} else {
 								mui.toast(data.RspTxt);
 							}
@@ -168,6 +155,7 @@
 			var courseInfo = {
 				type: 1, //类型 1为全部 0为关注
 				pageIndex: 1, //页码
+				pageSize:10,
 				totalPage: 0 //总页码
 			}
 			mui.init({
