--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -66,7 +66,7 @@
 				<div class="mui-indicator"></div>
 			</div>
 		</header>
-		<div class="mui-content">
+		<div class="mui-content" id="course-home">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
@@ -80,6 +80,7 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/vue.js"></script>
 		<script src="../../js/utils/webviewGroup.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
@@ -105,15 +106,34 @@
 				},
 				extras: {}
 			}
-			var items = [attendedItem, allItem];
+			var items = [];
 			mui.init();
+			var courseHome = new Vue({
+				el: '#course-home',
+				data: {
+					isAttended: 0,
+					canReload: false
+				},
+				watch: {
+					isAttended: function(newVal, oldVal) {
+						if(this.canReload) {
+							console.log("执行reload方法")
+							window.location.reload(true);
+						}
+					}
+				}
+			})
 			mui.plusReady(function() {
 				mui.fire(plus.webview.getLaunchWebview(), "indexReady");
 				getAttendedClasses(function(isShow) {
+					courseHome.canReload = false;
 					if(isShow) {
 						attendedItem.extras.isAttended = 1;
+						items = [attendedItem, allItem];
 					} else {
 						attendedItem.extras.isAttended = 0;
+
+						items = [allItem];
 					}
 					console.log("展现主界面加载的items", items);
 					setWebGroup();
@@ -128,15 +148,26 @@
 				})
 				window.addEventListener('focus', function() {
 					getAttendedClasses(function(isShow) {
+						attendedItem.extras.isAttended = isShow;
+						courseHome.canReload = true;
+						courseHome.isAttended = isShow;
 						console.log("show-home.html获取关注事件" + isShow)
 						events.fireToPageNone("course-attended.html", "courseAttended", isShow);
 						console.log("获取的加载网页：" + items.length, items);
 					})
 				})
+				window.addEventListener('courseAttended', function(e) {
+					console.log("######course-home.html传过来的值："+e.detail.data);
+					var isShow = parseInt(e.detail.data);
+					attendedItem.extras.isAttended = isShow;
+					courseHome.canReload = true;
+					courseHome.isAttended = isShow;
+					events.fireToPageNone("course-attended.html", "courseAttended", isShow);
+				})
 			}
 
 			function setWebGroup() {
-				console.log("获取的iten:" + items.length, items)
+				console.log("获取的item:" + items.length, items)
 				group = new webviewGroup("course-home.html", {
 					items: items,
 					onChange: function(obj) {
@@ -165,7 +196,7 @@
 						pageSize: 1 //每页记录数,传入0，获取总记录数
 					}, wd, function(data) {
 						wd.close();
-						console.log("course-home微课主界面：",data);
+						console.log("course-home微课主界面：", data);
 						if(data.RspCode == 0 && data.RspData.totalCount) {
 							callback(1);
 						} else {
