加载数据时禁止左右滑动

--- a/JiaoBaoYun-hb/html/micro-course/course-home2.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home2.html
@@ -163,7 +163,9 @@
 							}
 							this.courseInfo.pageIndex = 1;
 							this.listData = [];
-							mui("#pullrefresh").pullRefresh().refresh(true);
+							if(this.isSwiping){
+								mui("#pullrefresh").pullRefresh().refresh(true);
+							}
 							this.courseInfo.type = newVal;
 							this.requestData();
 						},
