--- a/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
@@ -180,6 +180,9 @@
 				if(cities.length === 1) {
 					return;
 				}
+				if(isSwiping){
+					return;
+				}
 				if(dir === 1) {
 					scieduList.isRightIn = false;
 				} else {
