修改左右滑动响应距离

--- a/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
@@ -180,7 +180,7 @@
 				if(cities.length === 1) {
 					return;
 				}
-				if(isSwiping){
+				if(scieduList.isSwiping){
 					return;
 				}
 				if(dir === 1) {
