--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -114,9 +114,9 @@
 			});
 			// 判断启动方式
 			function checkArguments() {
-				alert("plus.runtime.launcher: " + plus.runtime.launcher);
+//				alert("plus.runtime.launcher: " + plus.runtime.launcher);
 				var args = plus.runtime.arguments;
-				alert('arguments:'+args);
+//				alert('arguments:'+args);
 				if(args) {
 					// 处理args参数，如打开新页面等
 				}
