水平滑动和发现逻辑

--- a/JiaoBaoYun-hb/html/micro-course/course-home2.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home2.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicMicroClass.js"></script>
@@ -410,24 +410,24 @@
 					courseContainer.requestData();
 				})
 				//左滑
-//				window.addEventListener("swipeleft", function(e) {
-//					console.log("course-home2.html的向左滑动事件");
-//
-//					courseContainer.changePart(true);
-//				})
-				jQuery(window).addEventListener("swipeleft",function(e){
+				window.addEventListener("swipeleft", function(e) {
 					console.log("course-home2.html的向左滑动事件");
+
 					courseContainer.changePart(true);
 				})
-				jQuery(window).addEventListener("swiperight",function(e){
-					console.log("course-home2.html的向右滑动事件");
-					courseContainer.changePart(false);
-				})
-//				//右滑
-//				window.addEventListener("swiperight", function(e) {
+//				jQuery(window).addEventListener("swipeleft",function(e){
+//					console.log("course-home2.html的向左滑动事件");
+//					courseContainer.changePart(true);
+//				})
+//				jQuery(window).addEventListener("swiperight",function(e){
 //					console.log("course-home2.html的向右滑动事件");
 //					courseContainer.changePart(false);
 //				})
+				//右滑
+				window.addEventListener("swiperight", function(e) {
+					console.log("course-home2.html的向右滑动事件");
+					courseContainer.changePart(false);
+				})
 			}
 		</script>
 	</body>
