--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -22,8 +22,9 @@
 				statusBarBackground: '#13b7f6'
 			});
 			mui.plusReady(function() {
+//				getPackageInfo();
 //				document.addEventListener('plusready', function() {
-					checkArguments();
+//					checkArguments();
 //				}, false);
 				//获取APP的_documents文件夹对象,并清理文件
 				plus.io.resolveLocalFileSystemURL("_documents/", function(docEntry) {
@@ -57,7 +58,7 @@
 				window.addEventListener("indexReady", function() {
 					indexReady = true;
 				})
-
+				
 				function wainshow() {
 					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
