--- a/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
@@ -123,6 +123,9 @@
 			 * 下拉刷新回调方法
 			 */
 			function pulldownRefresh() {
+				if(scieduList.isSwiping){
+					return;
+				}
 				scieduList.resetPageInfo();
 				scieduList.requireListData(function() {
 					mui('#sciedu-list').pullRefresh().endPulldown();
@@ -134,6 +137,9 @@
 			 * 上拉加载更多回调方法
 			 */
 			function pullupRefresh() {
+				if(scieduList.isSwiping){
+					return;
+				}
 				console.log("上拉加载时的pageInfo:", scieduList.pageInfo);
 				if(scieduList.pageInfo.pageIndex > scieduList.pageInfo.totalPage) {
 					mui('#sciedu-list').pullRefresh().endPullupToRefresh(true);
