--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -22,9 +22,9 @@
 				statusBarBackground: '#13b7f6'
 			});
 			mui.plusReady(function() {
-				document.addEventListener('plusready', function() {
-					checkArguments();
-				}, false);
+//				document.addEventListener('plusready', function() {
+//					checkArguments();
+//				}, false);
 				//获取APP的_documents文件夹对象,并清理文件
 				plus.io.resolveLocalFileSystemURL("_documents/", function(docEntry) {
 					//console.log("获取_documents文件操作对象成功 " + docEntry.fullPath);
@@ -114,7 +114,6 @@
 			});
 			// 判断启动方式
 			function checkArguments() {
-//				alert("plus.runtime.launcher: " + plus.runtime.launcher);
 				var args = plus.runtime.arguments;
 //				alert('arguments:'+args);
 				if(args) {
