--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -116,8 +116,30 @@
 			function checkArguments() {
 				var args = plus.runtime.arguments;
 				alert('arguments:' + args);
+//				var args = 'jsyweishixuetang://?token=4f679b06-4d19-44e8-9c86-7f9e56903739&channel=sdhjy';
+//				console.log('args:'+args);
 				if(args) {
 					// 处理args参数，如打开新页面等
+					//在？的地方，转为数组，
+					var tempArr = args.split('?');
+					if (tempArr.length>0) {
+						var tempArr1 = tempArr[1].split('&');
+						var tempModel = {};
+						for (var i = 0; i < tempArr1.length; i++) {
+							if (i == 0) {
+								tempModel.token = tempArr1[i].split("=")[1];
+							} else{
+								tempModel.channel = tempArr1[i].split("=")[1];
+							}
+						}
+						alert('tempModel:'+JSON.stringify(tempModel));
+						var tempData = {
+							cptoken:tempModel.token
+						}
+						postDataPro_getPersonInfo(tempData,function(data){
+							alert('移动个人信息:'+JSON.stringify(data));
+						});
+					}
 				}
 			}
 
