还原为以前版本

--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -125,7 +125,7 @@
 				ShowVideoUtil.initVideo(document.getElementById("video"));
 				events.preload('../quan/classSpace-persons.html', 50);
 				events.fireToPageNone("../quan/aboutme.html", "detailReady");
-				events.fireToPageNone("show-home2.html", "detailReady");
+				events.fireToPageNone("show-home.html", "detailReady");
 				myStorage.setItem(storageKeyName.ISSHOWDETAILREADY, true);
 				window.addEventListener('showDetail', function(e) {
 					pageIndex = 1;
