Revert "还原为以前版本"
This reverts commit 2e329776fe601f6851ee9aae85578b1412872bed.

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -37,15 +37,15 @@
 				<span class="mui-icon iconfont icon-shangchuanyunduan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
-			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
+			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu-home.html">
 				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
-			<a id="bottom-show" class="mui-tab-item" href="../show/show-home.html">
+			<a id="bottom-show" class="mui-tab-item" href="../show/show-home2.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">发现</span>
 			</a>
-			<a class="mui-tab-item" href="../micro-course/course-home.html">
+			<a class="mui-tab-item" href="../micro-course/course-home2.html">
 				<span class="mui-icon iconfont icon-class"></span>
 				<span class="mui-tab-label">微学</span>
 			</a>
