--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -151,7 +151,7 @@
 						attendedItem.extras.isAttended = isShow;
 						courseHome.canReload = true;
 						courseHome.isAttended = isShow;
-						console.log("course-home.html获取关注事件" + isShow)
+						console.log("show-home.html获取关注事件" + isShow)
 						events.fireToPageNone("course-attended.html", "courseAttended", isShow);
 						console.log("获取的加载网页：" + items.length, items);
 					})
