--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -370,7 +370,7 @@
 						if(pageFlag == 'jxq') {
 							events.fireToPageNone('zone_main.html', 'refreshZonep');
 						} else {
-							events.fireToPageNone('../show/show-home.html', 'updatesShow');
+							events.fireToPageNone('../show/show-home2.html', 'updatesShow');
 						}
 
 						mui.back();
